--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# seizer <img src="man/figures/hex.png" align="right" alt="" width="120" />
+# seizer <a href="https://cesaraustralia.github.io/seizer/"><img src="man/figures/logo.png" align="right" height="138" /></a>
 
 The **seizer** package is designed to make data visualisation quick, easy and consistent for all Cesar staff. The package contains a few functions which fit in the general `ggplot2` syntax, and by using them you can make sure your figures will always look the same and adhere to the Cesar Australia style guide.
 
