drop_elements added

--- a/README.Rmd
+++ b/README.Rmd
@@ -33,7 +33,7 @@ require(devtools)
 devtools::install_github("cesaraustralia/seizer")
 ```
 
-You may be asked to update some packages, if the existing versions installed on your computer are old. Updating may cause compatibility issues with old code, so I suggest skipping updates on the first install attempt. If the package works fine, then there's nothing to worry about.
+You may be asked to update some packages, if the existing versions installed on your computer are old. Updating may cause compatibility issues with old code, so I suggest skipping updates on the first install attempt. If the package works fine, then there's nothing to worry about. If the installation fails, try again and update the required packages.
 
 ## Using seizer
 
@@ -69,7 +69,22 @@ p
 
 The next section contains more information about these colour palettes and how to use them.
 
-The final function you will use is `cesar_save()`. This is a wrapper function around the `ggplot2::ggsave()` function which you may have come across, allowing the user to save a plot by assigining values to width, height, dpi, etc. However, this function comes with several pre-determined presets to generate your outputs. These match the size and resolution of the saved plot to the destination format. There are five presets: `twitter`, `web`, `linkedin`, `facebook` and `print`. If no preset is specified, the function reverts to the user-provided values or, if none provided, to the `ggplot2::ggsave()` default values. There is also an optional argument, `logo`, which can be used to add a Cesar logo at the top right of the plot by setting `logo = TRUE`. This is turned off by default. You can also specify a destination pathway using the `path` argument - by default, the plot is saved to your working directory. Finally, the export defaults to .png format if an accepted format is not specified in the filename (e.g., "plot.jpeg").
+You may want to drop some static elements from your plot - specifically, the legend, the grid lines, the axis tick labels or the axis titles. This can be a bit cumbersome in `ggplot2` because it requires you to play around with the many possible `ggplot2::theme()` elements. To save you the trouble, **seizer** has the `drop_*()` family of functions, which pass the relevant arguments to `ggplot2::theme()` under the hood. If you want to remove a legend, you simply add `drop_legend()` to your plot:
+
+```{r ggplot drop legend, warning = FALSE}
+p + drop_legend()
+```
+
+The other `drop_*()` functions work similarly, but you will need to specify which axis you want to drop the element from. Your options are `x`, `y` or `both`. So for example, if you want to drop the grid lines from the x axis, drop the tick labels from the y axis, and drop the titles from both, you would run the following code:
+
+```{r ggplot drop elements, warning = FALSE}
+p +
+  drop_grid("x") +
+  drop_labels("y") +
+  drop_titles("both")
+```
+
+The final function you will use is `cesar_save()`. This is a wrapper function around the `ggplot2::ggsave()` function which you may have come across, allowing the user to save a plot by assigining values to width, height, dpi, etc. However, this function comes with several pre-determined presets to generate your outputs. These match the size and resolution of the saved plot to the destination format. There are five presets: `twitter`, `web`, `linkedin`, `facebook` and `print`. If no preset is specified, the function reverts to the user-provided values or, if none provided, to the `ggplot2::ggsave()` default values which are determined by your monitor size and resolution. There is also an optional argument, `logo`, which can be used to add a Cesar logo at the top right of the plot by setting `logo = TRUE`. This is turned off by default. You can also specify a destination pathway using the `path` argument - by default, the plot is saved to your working directory. Finally, the export defaults to .png format if an accepted format is not specified in the filename (e.g., "plot.jpeg").
 
 For example, if we wanted to save our plot in a web format (72dpi) with a logo, we would run the following code:
 
@@ -81,7 +96,7 @@ This automatically exports the last rendered plot into the working directory wit
 
 ## Cesar Australia colour palettes
 
-Finally, **seizer** contains a variety of colour palettes which can be used for your data vis. These are derived from the colours in the Cesar Australia style guide, with slight modifications to hue or brightness values to make them more suitable for data visualisation. As explained above, these can be easily plugged into `ggplot2` objects using the `scale_*_cesar_*()` family of functions. However, you can also access the palettes directly using `cesar_palettes()` to see the available palettes or pull individual colours or palettes out - for instance if you want to use them for a base R figure.
+Finally, **seizer** contains a variety of colour palettes which can be used for your data vis. These are derived from the colours in the Cesar Australia style guide, with slight modifications to hue or brightness values to make them more suitable for data visualisation. As explained above, these can be easily plugged into `ggplot2` objects using the `scale_*_cesar_*()` family of functions. However, you can also access the palettes directly using `cesar_palettes` to see the available palettes or pull individual colours or palettes out - for instance if you want to use them for a base R figure.
 
 ### Discrete palettes
 
@@ -91,11 +106,11 @@ Finally, **seizer** contains a variety of colour palettes which can be used for 
 plot(as_palette(cesar_palettes[c(1,2)]))
 ```
 
-These include 7 colours - if you have more groups in your data, You can use a helper function (see blow) to either interpolate additional intermediate colours or to discretise a continuous colour scale (either sequential or diverging). The latter option may be useful for ordered categorical variables, but note that colours may end up being too similar to discern between groups.
+These include 7 colours - if you have more groups in your data, You can use a helper function (see below) to either interpolate additional intermediate colours or to discretise a continuous colour scale (either sequential or diverging). The latter option may be useful for ordered categorical variables, but note that colours may end up being too similar to discern between groups.
 
 ### Sequential palettes
 
-**seizer** includes seven sequential palettes, which are suitable for mapping onto continuous variables. These are all based on "primary" cesar colours, and vary in brightness values around a single base hue. The seven palettes are:
+**seizer** includes seven sequential palettes, which are suitable for mapping onto continuous variables. These are all based on "primary" Cesar colours, and vary in brightness values around a single base hue. The seven palettes are:
 
 ```{r sequential, echo = FALSE, fig.height = 2}
 plot(as_palette(cesar_palettes[c(3:9)]))
@@ -126,4 +141,4 @@ plot(as_palette(list(new_pal, new_pal2, new_pal3)))
 
 ```
 
-Finally, two additional helper functions are includes, `cesar_pal()` and `cesar_gradient_n_pal()`. These are a bit more complicated, and serve as wrappers around `cesar_rampr()` to facilitate its use in `scale_*_cesar_*()` functions. In other words - you can safely ignore these, but feel free to play around with them if you'd like.
+Finally, two additional helper functions are included, `cesar_pal()` and `cesar_gradient_n_pal()`. These are a bit more complicated, and serve as wrappers around `cesar_rampr()` to facilitate its use in `scale_*_cesar_*()` functions. In other words - you can safely ignore these, but feel free to play around with them if you'd like.
